test/files/ill-typed/005_let_if.lam
let x = true in
    if x + x 
        then 1
        else false
